[project]
name = "fleetml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "torch>=2.5.1; platform_system == 'Darwin'",  # macOS
    "torch>=2.5.1; platform_system == 'Windows'",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://pypi.org/simple"
explicit = true
